# xcpcrating

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
docs/superpowers/specs/: 2026-06-16-school-bayesian-ranking-design.md
scripts/: pta_to_srk.py  update_data.sh  xcpcio_to_srk.py
src/xcpc_rating/: __init__.py  __main__.py  cli.py  export_web.py  identity.py  loader.py  medals.py  model.py  perf.py  report.py  tier.py  validate.py
src/xcpc_rating/engines/: __init__.py  base.py  incremental.py  school.py
srk-extra/official/ccpc/ccpc2022/: ccpc2022-online.srk.json
srk-extra/official/ccpc/ccpc2023/: ccpc2023-online.srk.json
srk-extra/official/ccpc/ccpc2024/: ccpc2024-online.srk.json
srk-extra/official/ccpc/ccpc2025/: ccpc2025-online.srk.json
srk-extra/official/icpc/icpc2022/: icpc2022-online-qual1.srk.json  icpc2022-online-qual2.srk.json
srk-extra/official/icpc/icpc2023/: icpc2023-online-qual1.srk.json  icpc2023-online-qual2.srk.json
srk-extra/official/icpc/icpc2024/: icpc2024ec-online1.srk.json  icpc2024ec-online2.srk.json
srk-extra/official/icpc/icpc2025/: icpc2025ec-online1.srk.json  icpc2025ec-online2.srk.json
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/public/data/: README.md  contests-index.json  meta.json  schools.json
web/public/data/players/: 00.json  (+255 more)
web/src/: App.tsx  main.tsx
web/src/lib/: data.ts  format.ts  md5.ts  rank.ts  useDebounce.ts
web/src/pages/: Placeholder.tsx
web/src/styles/: global.css  tokens.css  typography.css
(+472 files in other folders)
